# knighthacks

./: .gitignore  README.md  pyproject.toml  shell.nix
src/gemiknight/: .env  __init__.py  main.py  settings.py
src/gemiknight.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gemiknight/gui_package/: gui_output.py  logger_setup.py
src/gemiknight/gui_package/static/: styles.css
src/gemiknight/gui_package/templates/: index.html
src/gemiknight/mode_package/: mode_control.py
src/gemiknight/tts-package/: speech.py
src/gemiknight/utils-package/: helpers.py  logger.py
src/gemiknight/vision-package/: gemini.py  main.py  response_parser.py
src/gemiknight/vision-package/vision/: camera.py
src/gemiknight/vision_package/: livestream.py
src/gemiknight/voice-package/: voice-activation.py
src/gemiknight/voice_package/: voice-activation.py  voice_activation.py
